--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"formik": "^2.2.9",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-input-mask": "3.0.0-alpha.2",
 		"react-router-dom": "6",
 		"react-scripts": "5.0.1",
 		"shade-blend-color": "^1.0.0",
@@ -51,6 +52,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/react-input-mask": "^3.0.1",
 		"@types/styled-components": "^5.1.25",
 		"@typescript-eslint/eslint-plugin": "^5.29.0",
 		"@typescript-eslint/parser": "^5.29.0",
