--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-input-mask": "3.0.0-alpha.2",
 		"react-router-dom": "6",
 		"react-scripts": "5.0.1",
+		"react-toastify": "^9.0.5",
 		"shade-blend-color": "^1.0.0",
 		"styled-components": "^5.3.5",
 		"typescript": "^4.4.2",
