--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"formik": "^2.2.9",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^4.4.0",
 		"react-input-mask": "3.0.0-alpha.2",
+		"react-lottie": "^1.2.3",
 		"react-router-dom": "6",
 		"react-scripts": "5.0.1",
 		"react-toastify": "^9.0.5",
@@ -55,6 +57,7 @@
 	},
 	"devDependencies": {
 		"@types/react-input-mask": "^3.0.1",
+		"@types/react-lottie": "^1.2.6",
 		"@types/styled-components": "^5.1.25",
 		"@typescript-eslint/eslint-plugin": "^5.29.0",
 		"@typescript-eslint/parser": "^5.29.0",
