--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
 		"@types/react-dom": "^18.0.0",
 		"axios": "^0.27.2",
 		"formik": "^2.2.9",
+		"i18next": "^21.8.10",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-i18next": "^11.17.3",
 		"react-icons": "^4.4.0",
 		"react-input-mask": "3.0.0-alpha.2",
 		"react-lottie": "^1.2.3",
